force-app/main/default/objects/Branding_Asset__c/Branding_Asset__c.object-meta.xml
<CustomObject>
    <description>Branding and marketing material installed at a retailer or distributor. Created when a Branding &amp; Marketing Asset Request case reaches Installed, so the assets are visible on the account rather than buried as text on the case.</description>
    <label>Branding Asset</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Branding Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branding Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>