force-app/main/default/objects/Branding_Asset__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The outlet currently holding this branding material. Cleared when a return case completes - the asset stays Active but is no longer tagged to any account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branding Assets</relationshipLabel>
    <relationshipName>Branding_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>