force-app/main/default/objects/Branding_Asset__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck when the branding material is removed from the outlet. Drives Account.Is_Branded__c together with active deep freezer mappings.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>