force-app/main/default/objects/Branding_Asset__c/fields/Branding_Case__c.field-meta.xml
<CustomField>
    <fullName>Branding_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branding Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Branding Assets</relationshipLabel>
    <relationshipName>Branding_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>