force-app/main/default/objects/Branding_Asset__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The distributor the tagged outlet belongs to, carried the same way Asset_Mapping__c carries it. Stamped when the asset is created and re-synced when the retailer moves to another distributor.</description>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branding Assets (Distributor)</relationshipLabel>
    <relationshipName>Branding_Assets_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>