force-app/main/default/objects/Branding_Asset__c/fields/Installation_Image_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Image_URL_2__c</fullName>
    <description>Download URL of the second installation photo (Side 2), copied from the case when it reached Installed.</description>
    <label>Installation Image URL Side 2</label>
    <type>Url</type>
</CustomField>