force-app/main/default/objects/Branding_Asset__c/fields/Installation_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Installation_Image_URL__c</fullName>
    <description>Download URL of the installation photo, copied from the case when this branding asset was created.</description>
    <label>Installation Image URL</label>
    <type>Url</type>
</CustomField>