force-app/main/default/objects/Branding_Asset__c/fields/Installation_Photo_2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Photo_2__c</fullName>
    <description>Renders the second installation photo (Side 2) captured at the outlet.</description>
    <formula>IF( Installation_Image_URL_2__c != null ,(IMAGE(Installation_Image_URL_2__c , &apos;Installation Photo Side 2&apos;, 200, 200)) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Photo Side 2</label>
    <type>Text</type>
</CustomField>