force-app/main/default/objects/Branding_Asset__c/fields/Installation_Photo__c.field-meta.xml
<CustomField>
    <fullName>Installation_Photo__c</fullName>
    <description>Renders the installation photo captured at the outlet.</description>
    <formula>IF( Installation_Image_URL__c != null ,(IMAGE(Installation_Image_URL__c , &apos;Installation Photo&apos;, 200, 200)) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Photo</label>
    <type>Text</type>
</CustomField>