force-app/main/default/objects/Branding_Asset__c/fields/Request_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_Image_URL__c</fullName>
    <description>Download URL of the photo captured for this item when the case was raised.</description>
    <label>Request Image URL</label>
    <type>Url</type>
</CustomField>