force-app/main/default/objects/Branding_Asset__c/fields/Request_Photo__c.field-meta.xml
<CustomField>
    <fullName>Request_Photo__c</fullName>
    <description>Renders the photo captured for this item when the case was raised.</description>
    <formula>IF( Request_Image_URL__c != null ,(IMAGE(Request_Image_URL__c , &apos;Request Photo&apos;, 200, 200)) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Photo</label>
    <type>Text</type>
</CustomField>