force-app/main/default/objects/Branding_Asset__c/fields/Skin_Change_Count__c.field-meta.xml
<CustomField>
    <fullName>Skin_Change_Count__c</fullName>
    <label>Skin Change Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>