force-app/main/default/objects/Branding_Asset__c/fields/Skin_Change_History__c.field-meta.xml
<CustomField>
    <fullName>Skin_Change_History__c</fullName>
    <label>Skin Change History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>