force-app/main/default/objects/Branding_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Asset_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Installed_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Branding_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>